<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/HR_root"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<!--  TOP SCREEN NAVIGATION BUTTONS  -->
	<LinearLayout
		android:id="@+id/HR_layout_options"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical|right"
		android:orientation="horizontal" >
		
		<ImageView
			android:id="@+id/HR_bt_rulebook"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_margin="7dp"
			android:src="@drawable/ic_rulebook"
			android:contentDescription="@string/desc_ic_rulebook"
			android:clickable="true" />
		
		<ImageView
			android:id="@+id/HR_bt_penalty"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_margin="7dp"
			android:src="@drawable/ic_penalty"
			android:contentDescription="@string/desc_ic_penalty"
			android:clickable="true" />

		<ImageView
			android:id="@+id/HR_bt_settings"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_margin="7dp"
			android:src="@drawable/ic_settings"
			android:contentDescription="@string/desc_ic_settings"
			android:clickable="true" />
	</LinearLayout>
	<!-- TOP HOME/AWAY SCORES AND LOGOS  -->
	<LinearLayout
		android:id="@+id/HR_layout_teams"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/HR_layout_options"
		android:gravity="center"
		android:orientation="horizontal" >
		
		<!--  HOME TEAM LOGO AND ACRONYM  -->
		<LinearLayout
			android:id="@+id/HR_layout_home_team"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:padding="5dp"
			android:orientation="vertical" >
			
			<TextView
				android:id="@+id/HR_txt_home_acro"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal" />
			
			<ImageView 
				android:id="@+id/HR_ic_home"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center" />
			
			<TextView
				android:id="@+id/HR_lbl_home_team"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:text="@string/lbl_home_team" />
		</LinearLayout>
		
		<!-- SCORES LABELS  -->
		<LinearLayout
			android:id="@+id/HR_layout_scores_parent"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_gravity="center_horizontal"
			android:padding="5dp"
			android:orientation="vertical" >
			
			<TextView
				android:id="@+id/HR_txt_score_label"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:text="@string/lbl_score" />
			
			<!--  SIDE BY SIDE SCORES  -->
			<LinearLayout
				android:id="@+id/HR_layout_scores"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="5dp"
				android:orientation="horizontal" >
				
				<TextView 
					android:id="@+id/HR_txt_home_score"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="7dp"
					android:gravity="center"
					android:text="@string/txt_init_score" />
			
				<TextView
					android:id="@+id/HR_txt_away_score"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_margin="7dp"
					android:gravity="center"
					android:text="@string/txt_init_score" />
			</LinearLayout>
		</LinearLayout>
			
		<!--  AWAY TEAM LOGO AND ACRONYM  -->
		<LinearLayout 
			android:id="@+id/HR_layout_away_team"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_gravity="center_horizontal"
			android:padding="5dp"			
			android:orientation="vertical" >
			
			<TextView
				android:id="@+id/HR_txt_away_acro"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal" />
			
			<ImageView 
				android:id="@+id/HR_ic_away"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:gravity="center" />
			
			<TextView
				android:id="@+id/HR_lbl_away_team"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"
				android:text="@string/lbl_away_team" />
		</LinearLayout>
	</LinearLayout>	<!-- close horizontal home/away team section -->
	
	<!-- GRID LAYOUTS FOR TEAMS -->
	<LinearLayout 
		android:id="@+id/HR_layout_grids"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/HR_layout_teams"
		android:gravity="center"
		android:padding="5dp"
		android:orientation="horizontal" >
		
		<GridView 
			android:id="@+id/HR_grid_home"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:gravity="center"
			android:numColumns="5"
			android:stretchMode="none"
			android:listSelector="#00000000" >
		</GridView>
		
		<GridView 
			android:id="@+id/HR_grid_away"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_margin="5dp"
			android:gravity="center"
			android:numColumns="5"
			android:stretchMode="none"
			android:listSelector="#00000000" >
		</GridView>
	</LinearLayout>
	
	<!-- TIME, TIME BUTTONS, AND WHISTLE BUTTON -->
	<LinearLayout
		android:id="@+id/HR_layout_clock_and_whistle"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/HR_layout_grids"
		android:gravity="center"
		android:padding="5dp"
		android:orientation="horizontal" >
		
		<!-- GAME CLOCK TEXT AND BUTTONS -->
		<LinearLayout
			android:id="@+id/HR_layout_clock_info"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:padding="5dp"
			android:orientation="vertical" >
			
			<TextView 
				android:id="@+id/HR_txt_game_clock"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center_horizontal"				
				android:typeface="monospace"
				android:textStyle="bold"
				android:text="@string/txt_init_game_clock" />
			
			<!-- SIDE BY SIDE BUTTONS (START/STOP, EDIT, HALFTIME/OVERTIME  -->
			<LinearLayout
				android:id="@+id/HR_layout_clock_buttons"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="5dp"
				android:orientation="horizontal" >
				
				<Button
					android:id="@+id/HR_bt_start_pause_resume"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="2dp"
	                android:gravity="center"
	                android:clickable="true"
	                android:text="@string/bt_start"
	                style="@android:attr/buttonBarButtonStyle" />
				
				<Button
	                android:id="@+id/HR_bt_edit_game_clock"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="2dp"
	                android:gravity="center"
	                android:clickable="true"
	                android:text="@string/bt_edit"
	                style="@android:attr/buttonBarButtonStyle" />
				
				 <Button
	                android:id="@+id/HR_bt_halftime_overtime"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="2dp"
	                android:gravity="center"
	               	android:clickable="false"
	               	android:text="@string/bt_halftime"
	               	style="@android:attr/buttonBarButtonStyle" />
			</LinearLayout> <!-- end side-by-side buttons  -->
		</LinearLayout><!-- end game clock text and buttons -->
		
		<Button
			android:id="@+id/HR_bt_whistle"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_margin="2dp"
			android:gravity="center"
			android:clickable="true"
			android:text="@string/bt_whistle" />
	</LinearLayout>	
</RelativeLayout>