<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/SCR_root"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >

	<!--  TOP SCREEN NAVIGATION BUTTONS  -->
	<LinearLayout
		android:id="@+id/SCR_layout_options"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical|right"
		android:orientation="horizontal" >
		
		<ImageView
			android:id="@+id/SCR_bt_rulebook"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_margin="7dp"
			android:clickable="true"
			android:src="@drawable/ic_rulebook"
			android:contentDescription="@string/desc_ic_rulebook" />

		<ImageView
			android:id="@+id/SCR_bt_settings"
			android:layout_width="50dp"
			android:layout_height="50dp"
			android:layout_margin="7dp"
			android:clickable="true"
			android:src="@drawable/ic_settings"
			android:contentDescription="@string/desc_ic_settings" />
	</LinearLayout>
	
	<!-- TEAM LOGO -->
	<LinearLayout
		android:id="@+id/SCR_layout_team_desc"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_below="@id/SCR_layout_options"
		android:layout_centerHorizontal="true"
		android:gravity="center"
		android:orientation="vertical" >
			
			<TextView
				android:id="@+id/SCR_txt_team_acro"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal" />
		
			<ImageView 
				android:id="@+id/SCR_ic_team"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal" />
			
			<TextView
				android:id="@+id/SCR_txt_home_away"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_horizontal" />
	</LinearLayout>
	
	<!-- PLAYER GRID, AND PLAYER BUTTONS -->
	<LinearLayout 
		android:id="@+id/SCR_layout_team"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/SCR_layout_team_desc"
		android:layout_marginTop="20dp"
		android:layout_marginBottom="20dp"
		android:gravity="center"
		android:orientation="horizontal" >
		
		<GridView 
			android:id="@+id/SCR_grid"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:padding="1dp"
			android:numColumns="5"
			android:stretchMode="none"
			android:listSelector="#00000000" >
		</GridView>
		
		<!-- TEAM MODIFICATION BUTTONS -->
		<LinearLayout 
			android:id="@+id/SCR_layout_player_buttons"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:padding="5dp" 
			android:orientation="vertical" >
			
			<Button
                android:id="@+id/SCR_bt_add_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:clickable="true"
                android:textSize="32sp"
                android:typeface="monospace"
                android:textStyle="bold"
                android:text="@string/bt_add_player" />
			
			 <Button
                android:id="@+id/SCR_bt_remove_player"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
               	android:clickable="true"
                android:textSize="32sp"
                android:typeface="monospace"
                android:textStyle="bold"
                android:text="@string/bt_rem_player" />
		</LinearLayout>
	</LinearLayout> <!-- end logo, grid, and player buttons -->
	
	<!-- CLOCK TEXT, CLOCK BUTTONS, and RESET BUTTON -->
	<LinearLayout
		android:id="@+id/SCR_layout_shot_clock_parent"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_below="@id/SCR_layout_team"
		android:gravity="center"
		android:orientation="horizontal" >
		
		<!-- CLOCK TEXT AND IMMEDIATE BUTTONS -->
		<LinearLayout
			android:id="@+id/SCR_layout_shot_clock"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:orientation="vertical" >
			 
			<TextView 
				android:id="@+id/SCR_txt_shot_clock"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:typeface="monospace"
				android:textStyle="bold"
				android:text="@string/txt_init_shot_clock" />
			
			<!-- SHOT CLOCK BUTTONS -->
			<LinearLayout 
				android:id="@+id/SCR_layout_clock_buttons"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"
				android:orientation="horizontal" >
				
				<Button
	                android:id="@+id/SCR_bt_edit_sc"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="2dp"
	                android:gravity="center"
	               	android:clickable="true"
	                android:text="@string/bt_edit" />
				
				<Button
	                android:id="@+id/SCR_bt_pause_sc"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_margin="2dp"
	                android:gravity="center"
	               	android:clickable="true"
	                android:text="@string/bt_pause" />
				
			</LinearLayout> <!-- end shot clock edit and pause buttons -->
		</LinearLayout> <!-- end shot clock text and buttons -->
		
		<Button 
			android:id="@+id/SCR_bt_start_reset"
			android:layout_width="100dp"
			android:layout_height="100dp"
			android:layout_margin="2dp"
			android:gravity="center"
			android:clickable="true"
			android:text="@string/bt_start" />
		
	</LinearLayout>	<!-- end shot clock section -->
	
	<!-- GAME CLOCK -->
	<RelativeLayout
		android:id="@+id/SCR_layout_game_clock"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@id/SCR_layout_shot_clock_parent" >
		
		<TextView 
			android:id="@+id/SCR_txt_game_clock"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:textSize="28sp"
			android:typeface="monospace"
			android:textStyle="bold"
			android:text="@string/txt_init_game_clock" />
	</RelativeLayout>

</RelativeLayout>